--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,10 +13,11 @@ body {
   height: 100%;
 }
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 16px;
+  color: #232323;
   line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
+  // -webkit-font-smoothing: antialiased;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
